drop selection area in role and add selection area in admin principal

--- a/src/app/pages/settings/role/create/role-create.component.html
+++ b/src/app/pages/settings/role/create/role-create.component.html
@@ -14,7 +14,7 @@
             </mat-error>
           </mat-form-field>
         </div>
-        <div fxLayout="row wrap" fxLayout.lt-md="column" class="pb-16 px-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+        <!-- <div fxLayout="row wrap" fxLayout.lt-md="column" class="pb-16 px-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
 
           <mat-form-field fxFlex="12%" class="is-light form-primary">
             <mat-select placeholder="National" formControlName="national">
@@ -72,7 +72,7 @@
               Territori harus diisi
             </mat-error>
           </mat-form-field>
-        </div>
+        </div> -->
       </form>
       <mat-divider></mat-divider>
       <div class="ayo-content-middle pb-48">
