--- a/src/app/pages/user-management/admin-principal/edit/admin-principal-edit.component.html
+++ b/src/app/pages/user-management/admin-principal/edit/admin-principal-edit.component.html
@@ -17,16 +17,16 @@
         </div>
         <div class="ayo-middle pt-24" fxLayout="column">
 
-            <mat-form-field fxFlex="100" class="is-light">
-              <input matInput placeholder="Nama" type="text" formControlName="name">
-              <mat-error *ngIf="formAdmin.controls['name'].hasError('required') && formAdmin.controls['name'].touched ">
-                Nama harus diisi.
-              </mat-error>
-            </mat-form-field>
+          <mat-form-field fxFlex="100" class="is-light">
+            <input matInput placeholder="Nama" type="text" formControlName="name">
+            <mat-error *ngIf="formAdmin.controls['name'].hasError('required') && formAdmin.controls['name'].touched ">
+              Nama harus diisi.
+            </mat-error>
+          </mat-form-field>
 
-            <mat-form-field fxFlex="100" class="is-light">
-              <input matInput disabled placeholder="Username" type="text" formControlName="username">
-            </mat-form-field>
+          <mat-form-field fxFlex="100" class="is-light">
+            <input matInput disabled placeholder="Username" type="text" formControlName="username">
+          </mat-form-field>
 
           <mat-form-field fxFlex="100" class="is-light">
             <input matInput placeholder="Email" type="email" formControlName="email">
@@ -34,6 +34,44 @@
               Alamat email harus diisi.
             </mat-error>
           </mat-form-field>
+          <div fxLayout="row wrap" fxLayout.lt-md="column" class="py-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="National" formControlName="national">
+                <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Zone" formControlName="zone" (selectionChange)="getAudienceArea('region', formAdmin.get('zone').value)">
+                <mat-option *ngFor="let item of list['zone']" [value]="item.id">{{item.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Regional" formControlName="region" (selectionChange)="getAudienceArea('area', formAdmin.get('region').value)">
+                <mat-option *ngFor="let item of list['region']" [value]="item.id">{{item.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Area" formControlName="area" (selectionChange)="getAudienceArea('salespoint', formAdmin.get('area').value)">
+                <mat-option *ngFor="let item of list['area']" [value]="item.id">{{item.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Salespoint" formControlName="salespoint" (selectionChange)="getAudienceArea('district', formAdmin.get('salespoint').value)">
+                <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">{{item.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="District" formControlName="district" (selectionChange)="getAudienceArea('territory', formAdmin.get('district').value)">
+                <mat-option *ngFor="let item of list['district']" [value]="item.id">{{item.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field fxFlex="12%" class="is-light form-primary">
+              <mat-select placeholder="Territory" formControlName="territory">
+                <mat-option *ngFor="let item of list['territory']" [value]="item.id">{{item.name}}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
           <div fxFlex="100" fxLayout="row">
             <mat-form-field fxFlex="40" class="is-light">
               <mat-select placeholder="Peran" formControlName="role">
