--- a/src/app/pages/user-management/admin-principal/create/admin-principal-create.component.html
+++ b/src/app/pages/user-management/admin-principal/create/admin-principal-create.component.html
@@ -51,7 +51,7 @@
 
         <mat-step [stepControl]="wilayah">
           <form [formGroup]="wilayah">
-            <ng-template matStepLabel>Wilayah</ng-template>
+            <ng-template matStepLabel>Area</ng-template>
 
 
             <div fxFlex="1 0 auto" fxLayout="column">
