--- a/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
+++ b/src/app/pages/inapp-marketing/banner/create/banner-create.component.html
@@ -206,8 +206,8 @@
               *ngIf="bannerSelected">
               <div fxFlex="45">
                 <div class="banner-image-template-selected">
-                  <div id="banner" [class]="'banner-image-custom ' + bannerSelected.class" [title]="bannerSelected.name"
-                    [style.background-image]="'url(' + bannerSelected.image + ')'">
+                  <div id="banner" [class]="'banner-image-custom-selected ' + bannerSelected.class" [title]="bannerSelected.name">
+                    <img [src]="bannerSelected.image" width="390" height="190" [alt]="bannerSelected.name">
                     <img *ngIf="bannerSelected.product" [src]="bannerSelected.product" class="product">
                     <div class="title">{{bannerSelected.title}}</div>
                     <div [class]="'button ' + bannerSelected.button_class">{{bannerSelected.button_text}}</div>
