--- a/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.html
+++ b/src/app/pages/inapp-marketing/banner/edit/banner-edit.component.html
@@ -211,7 +211,7 @@
               <div fxFlex="45">
                 <div class="banner-image-template-selected">
                   <div id="banner" [class]="'banner-image-custom-selected ' + bannerSelected.class" [title]="bannerSelected.name">
-                    <img [src]="bannerSelected.image" width="390" height="190" [alt]="bannerSelected.name">
+                    <img [src]="bannerSelected.image" style="height: 190px" [alt]="bannerSelected.name">
                     <img *ngIf="bannerSelected.product" [src]="bannerSelected.product" class="product">
                     <div class="title">{{bannerSelected.title}}</div>
                     <div [class]="'button ' + bannerSelected.button_class">{{bannerSelected.button_text}}</div>
