--- a/src/app/pages/sku-management/coin/index/coin-index.component.html
+++ b/src/app/pages/sku-management/coin/index/coin-index.component.html
@@ -97,7 +97,7 @@
             <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
                 <div class="button-row pl-8">
-                  <button mat-icon-button color="primary">
+                  <button type="button" mat-icon-button color="primary" (click)="flush('program', row)">
                     <mat-icon>history</mat-icon>
                   </button>
                 </div>
@@ -151,7 +151,7 @@
             <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value" style="justify-content: center !important">
                 <div class="button-row pl-8">
-                  <button mat-icon-button color="primary">
+                  <button type="button" mat-icon-button color="primary" (click)="flush('program', row)">
                     <mat-icon>history</mat-icon>
                   </button>
                 </div>
